[package]
name = "rasa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.29.0-beta.0"
clap = { version="4.0.8", features=["derive"]}
eframe = "0.19.0"
egui = "0.19.0"
serialport = "4.2.1"
serde = "1.0"
spin_sleep = "1.1.1"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
rev_buf_reader = "0.3.0"
csv = "1.1.6"
rand = "0.8.4"
rand_distr = "0.4"
tch = "0.12.0"
